<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_scroll_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_transparent"
    tools:context=".homePage">

    <LinearLayout
        android:id="@+id/mainPartitions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cards_background"
            android:backgroundTint="#9D9D9D">

            <TextView
                android:id="@+id/sample_name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/knewave"
                android:text="@string/sample_name_profile_text"
                android:textColor="@color/main_solid"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hiText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/helloText"
                android:textColor="@color/main_solid"
                app:layout_constraintBottom_toTopOf="@+id/sample_name_profile"
                app:layout_constraintStart_toStartOf="@+id/sample_name_profile" />

            <TextView
                android:id="@+id/notification_text_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="20dp"
                android:text="@string/sample_notification_count"
                android:textColor="@color/main_solid"
                app:drawableStartCompat="@drawable/notification_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/offers_container"
            android:layout_width="match_parent"
            android:layout_height="400sp"
            android:layout_marginTop="5sp"
            android:background="@color/cards_background"
            android:visibility="visible">

            <TextView
                android:id="@+id/offer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/knewave"
                android:text="@string/today_offer_text"
                android:textColor="@color/main_solid"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/scrolling_offers_container"
                android:layout_width="359dp"
                android:layout_height="298dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/savings_image"
                        android:layout_width="350dp"
                        android:layout_height="0dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/salad"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/savings_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/savings_text"
                        android:textColor="@color/white"
                        android:textSize="34sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </HorizontalScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/quick_links_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_marginTop="10sp"
            android:background="@color/cards_background">

            <TextView
                android:id="@+id/quick_links_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/knewave"
                android:text="@string/quick_links_text"
                android:textColor="@color/main_solid"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/menu_quick_links"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:layout_marginStart="24dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/knewave"
                android:text="@string/menu_quick_link"
                android:textColor="@color/main_solid"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="75dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/knewave"
                android:text="@string/previous_orders_quick_link"
                android:textColor="@color/main_solid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.763"
                app:layout_constraintStart_toEndOf="@+id/button3"
                app:layout_constraintTop_toTopOf="@+id/button3" />

            <Button
                android:id="@+id/button3"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:layout_marginTop="28dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/knewave"
                android:text="@string/services_quick_link"
                android:textColor="@color/main_solid"
                app:layout_constraintEnd_toEndOf="@+id/menu_quick_links"
                app:layout_constraintTop_toBottomOf="@+id/menu_quick_links" />

            <Button
                android:id="@+id/button4"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/knewave"
                android:text="@string/locations_quick_link"
                android:textColor="@color/main_solid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toEndOf="@+id/menu_quick_links"
                tools:layout_editor_absoluteY="75dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/quick_offers_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>