<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".orders_page"
    tools:ignore="VisualLintBounds">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Orders_container"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@color/cards_background">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/knewave"
            android:text="@string/orders_text"
            android:textColor="@color/main_solid"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:layout_width="369dp"
            android:layout_height="383dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/order_button_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_transparent">

        <Button
            android:id="@+id/complete_order_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/main_solid_button_back"
            android:fontFamily="@font/knewave"
            android:text="@string/complete_order_text"
            android:textColor="@color/main_solid"
            app:layout_constraintBottom_toTopOf="@+id/cancel_order_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/cancel_order_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/main_solid_button_back"
            android:fontFamily="@font/knewave"
            android:text="@string/cancel_order_text"
            android:textColor="@color/main_solid"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/complete_order_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/complete_order_button"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>